<resources>
    <string name="app_name">Shop Lite</string>
    <string name="copyright">Copyright &#169; 2017 Tom Grubbe</string>

    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="category_prompt">Category:</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="menu_button">Menu Button</string>
    <string name="add_new">+ Add New</string>
    <string name="type_your_message">Type Your Message:</string>
    <string name="name">Name:</string>
    <string name="prompt_remove_all_title">Removing checked items</string>
    <string name="prompt_remove_all_detail">Ask when removing all checked items from the main product list.</string>
    <string name="prefs_remove_all">pref_prompt_remove_all</string>
    <string name="prompt_delete_product_title">Deleting products</string>
    <string name="prompt_delete_product_summary">Ask when permanently deleting products from the master list</string>
    <string name="prefs_delete_product">prefs_delete_product</string>
    <string name="prompt_delete_category_title">Deleting categories</string>
    <string name="prompt_delete_category_summary">Ask when permanently deleting categories from the master list</string>
    <string name="prefs_delete_category">prefs_delete_category</string>
    <string name="recent_items">Recent Items</string>
</resources>
