<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tomgrubbe.shoplite.AboutActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/BumbleBeeToolbar"
        app:popupTheme="@style/Theme.AppCompat.NoActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/textVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="v1.0"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@mipmap/ic_launcher_web" />


        <TextView
            android:id="@+id/textCopyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>